# ChangeLog for dev-ruby/ruby-poppler
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.2 2006/12/30 04:51:06 metalgod Exp $

*ruby-poppler-0.16.0 (30 Dec 2006)

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org>
  +ruby-poppler-0.16.0.ebuild:
  Version Bump. Added ~amd64 keyword.

*ruby-poppler-0.15.0 (02 Sep 2006)

  02 Sep 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-poppler-0.15.0.ebuild:
  Initial ebuild, #139164
