@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ruby-poppler-0.16.0.ebuild,v 1.1 2006/12/30 04:51:06 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ruby-poppler-0.16.0.ebuild,v 1.2 2008/01/17 16:11:01 flameeyes Exp $
 
 inherit ruby ruby-gnome2
 
@@ -10,7 +10,8 @@ IUSE=""
 USE_RUBY="ruby18 ruby19"
 DEPEND=">=app-text/poppler-bindings-0.5.2
 	dev-ruby/ruby-gdkpixbuf2
-	>=dev-ruby/ruby-glib2-${PV}"
+	>=dev-ruby/ruby-glib2-${PV}
+	dev-util/pkgconfig"
 pkg_setup()
 {
 	pkg-config --exists poppler-glib ||
