@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-poppler
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.2 2006/12/30 04:51:06 metalgod Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.3 2008/01/17 16:11:01 flameeyes Exp $
+
+  17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
+  ruby-poppler-0.16.0.ebuild:
+  Add missing pkg-config dependency. Thanks Patrick in bug #206218.
 
 *ruby-poppler-0.16.0 (30 Dec 2006)
 
